--- a/style.css
+++ b/style.css
@@ -1339,7 +1339,7 @@ h1, h2, h3, h4, h5, h6 {
     font-style: normal;
     line-height: 105px;
     font-weight: 700;
-    color: #ffffff;
+    color: #000;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1382,6 +1382,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #000;
     line-height: 28px;
     font-weight: 500;
+    font-family: 'Mukta', sans-serif;
 }
 
 .gambar-bahasa {
