--- a/style.css
+++ b/style.css
@@ -1492,7 +1492,7 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #000;
+    background-color: #ffec88;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -1527,7 +1527,6 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid darkgray;
     border-radius: 25px;
 }
 
@@ -1549,7 +1548,6 @@ h1, h2, h3, h4, h5, h6 {
 .game-options-container span {
     width: 45%;
     height: 3rem;
-    border: 2px solid darkgray;
     border-radius: 20px;
     overflow: hidden;
 }
@@ -1596,13 +1594,13 @@ input[type="radio"]:checked~.option {
     background: none;
     color: rgb(25, 25, 25);
     font-weight: 600;
-    border: 2px solid gray;
+    border: 2px solid #FFB703;
     cursor: pointer;
     outline: none;
 }
 
 .next-button-container button:hover {
-    background-color: rgb(143, 93, 93);
+    background-color: #FFB703;
 }
 
 .score-content-container {
@@ -1642,7 +1640,7 @@ input[type="radio"]:checked~.option {
 .modal-content-container {
     height: 20rem;
     width: 25rem;
-    background-color: rgb(43, 42, 42);
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1653,7 +1651,7 @@ input[type="radio"]:checked~.option {
 .modal-content-container h1 {
     font-size: 1.3rem;
     height: 3rem;
-    color: lightgray;
+    color: black;
     text-align: center;
 }
 
@@ -1685,14 +1683,15 @@ input[type="radio"]:checked~.option {
     background: none;
     outline: none;
     border: 1px solid rgb(252, 242, 241);
-    color: white;
+    color: black;
+    border: 2px solid #FFB703;
     font-size: 1.1rem;
     cursor: pointer;
     border-radius: 20px;
 }
 
 .modal-button-container button:hover {
-    background-color: rgb(83, 82, 82);
+    background-color: #FFB703;
 }
 
 @media(min-width : 300px) and (max-width : 350px) {
